--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -9,10 +9,13 @@
     "commentbox.io": "^2.0.0",
     "glamor": "^2.20.40",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.3.0",
     "react-debounce-input": "^3.2.2",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
-    "react-scripts": "3.4.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "react-scroll": "^1.7.16",
     "react-select": "^3.0.8",
     "react-share": "^4.1.0",
